fix spacing

--- a/packages/assets/scss/03-organisms/_mass-feedback-form.scss
+++ b/packages/assets/scss/03-organisms/_mass-feedback-form.scss
@@ -41,7 +41,7 @@ $formQuickTransitions: max-height 0.3s linear;
       }
     }
 
-    .submitButton {
+    .submitButtonWrapper {
       display: none;
     }
 
